A.F....... [ZBX-1357] updated Brazilian Portuguese, Czech, Hungarian, Italian, Polish, Slovak and Russian translations; thanks to Zabbix translators (Richlv)
A.F....... [ZBXNEXT-1426] added initial Persian translation (Richlv)
A.F....... [ZBXNEXT-1447] added initial Finnish translation (Richlv)
........S. [ZBX-5525] renamed macro {TRIGGER.COMMENT} to {TRIGGER.DESCRIPTION} (Sasha)

Bug fixes:
..F....... [ZBX-5547] fixed server name and other parameters in frontend setup are not escaped (Vedmak)
..F....... [ZBX-3347] fixed error when create item with new application that already exists (Vedmak)
A......... [ZBX-3907] fixed api user.logout method (Vedmak)
..F....... [ZBX-4983] fixed import of 1.8 templates if they contain already existing host macros (Vedmak)
..F....... [ZBX-5579] in monitoring->triggers if trigger has no events, acknowledge column display 'no events' instead of 'Acknowledged' (Vedmak)
..F....... [ZBX-4247] fixed error when trigger expression items has same trigger expression like parameter in key (Vedmak)
..F....... [ZBX-5606] removed 'units' and 'store value' fields for character data items (Vedmak)
..F....... [ZBX-5608] fixed incorrect macro resolving in trigger descriptions if expression has duplicate functions (Vedmak)
.D........ [ZBX-5650] added more information about ProxyLocalBuffer parameter in the example configuration file (Richlv)
.......PS. [ZBX-5414] fixed handling of an incorrect username/password of SNMPv3 checks (Sasha)
...G...... [ZBX-5609] fixed defaults for parameters of vfs.dev.read/write items in "zabbix_agentd -p" (Sasha)
...G...... [ZBX-5552] fixed processing of vm.memory.size[total] under FreeBSD (Sasha)
.......PS. [ZBX-5572] fixed trivial compilation warnings (Sasha)

--------------------------------------------------------------------------------
Changes for 2.0.3

2.0.3rc2 was released as 2.0.3 without any changes

--------------------------------------------------------------------------------
Changes for 2.0.3rc2
