@@ -366,6 +366,26 @@ if ($_REQUEST['form'] == 'full_clone') {
 			$templateList->addRow(_('Graph prototypes'), $listBox);
 		}
 	}
+
+	// screens
+	$screens = API::TemplateScreen()->get(array(
+		'inherited' => false,
+		'templateids' => $templateid,
+		'output' => array('screenid', 'name'),
+	));
+	if (!empty($screens)) {
+		$screensList = array();
+		foreach ($screens as $screen) {
+			$screensList[$screen['screenid']] = $screen['name'];
+		}
+		order_result($screensList);
+
+		$listBox = new CListBox('screens', null, 8);
+		$listBox->setAttribute('disabled', 'disabled');
+		$listBox->addItems($screensList);
+
+		$templateList->addRow(_('Screens'), $listBox);
+	}
 }
 
 $divTabs->addTab('templateTab', _('Template'), $templateList);
